Fix scrollbar class

--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -24,22 +24,16 @@
   }
 
   .scrollbar::-webkit-scrollbar {
-    @supports (-ms-ime-align: auto) {
-      height: 0.4em;
-    }
+    height: 0.4em;
   }
 
   .scrollbar::-webkit-scrollbar-thumb {
-    @supports (-ms-ime-align: auto) {
-      border-radius: 0.2em;
-      box-shadow: inset 0 0 0.1em 0.1em #999;
-      border: solid 0.1em transparent;
-    }
+    border-radius: 0.2em;
+    box-shadow: inset 0 0 0.1em 0.1em #999;
+    border: solid 0.1em transparent;
   }
 
   .scrollbar::-webkit-scrollbar-thumb:hover {
-    @supports (-ms-ime-align: auto) {
-      background-color: #909090;
-    }
+    background-color: #909090;
   }
 }
